--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,14 +1,9 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-}
-
-body.dark {
-    background-color: #121212;
-    color: #fff;
 }
 
 header {
@@ -18,7 +13,7 @@ header {
     text-align: center;
 }
 
-header nav a {
+nav a {
     color: white;
     text-decoration: none;
     margin: 0 10px;
@@ -26,31 +21,27 @@ header nav a {
 
 .products, #cart-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
     margin: 20px;
 }
 
-.product {
+.product, .cart-item {
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     text-align: center;
-    transition: transform 0.3s;
-}
-
-.product:hover {
-    transform: scale(1.05);
+    width: 250px;
 }
 
 button {
     background-color: #0078D7;
     color: white;
     border: none;
-    padding: 10px;
     border-radius: 5px;
+    padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
